maze.island.IslandMaze.scala.error
Compilation error:
IslandMaze:39: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  left()
  ^IslandMaze:40: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  if(isFacingWall==true){
  ^