maze.island.IslandMaze.scala.code
override def run() {
  
  while(getY()!=0){
    
    if(isFacingWall==false){forward();}
    else if(leftWall==false){
      left();
      forward();
      right();
    }
    else{
      right();
      forward();
      left();
    }
  }
  right();
  suivremur()
}
  
  
def suivremur(){
  while(isOverBaggle==false){
    mur()
  }
  pickupBaggle();  }

def mur(){
  
  left()
 	while(isFacingWall==true){
    right();
	}
  forward();
}

def leftWall():Boolean{
  left()
  if(isFacingWall==true){
    right();
    return true;
  }
  else{
    right();
    return false;
  }
}